# zcam

./: .gitignore  .gitmodules  CMakeLists.txt  HINTS  LOG  Makefile  README-de.md  README.md  TODO.md  mops.zcam  mops1.zcam  qtquickcontrols2.conf  zcam.desktop
data/: assets.json
manual/: build.md  development-de.md  install-de.md  manual-de.md  manual.md
qml/: CamShape.qml  ConfigColor.qml  ConfigColorsPanel.qml  ConfigGuiPanel.qml  ConfigMachines.qml  ConfigPanel.qml  ConfigRecipes.qml  ConfigSystem.qml  FontFamilyButton.qml  GridShape.qml  InspectorPanel.qml  LaserLayer1.qml  LaserPanel.qml  LockCheckBox.qml  Main.qml  MainPanel.qml  MediaArtworkPanel.qml  MediaBrowser.qml  MediaFontsPanel.qml  MediaIconsPanel.qml  NavigationCube.qml  ProjectTree.qml  PropertyEditor.qml  Shape.qml  TestCube.qml  ToolColumn.qml  ToolRow.qml  TreeViewPanel.qml  View3DPanel.qml
src/: bezier.cpp  bezier.h  cad.cpp  cad.h  cam.cpp  cam.h  circle.cpp  circle.h  clipper.cpp  clipper.h  clipper.rectclip.cpp  configmodel.cpp  configmodel.h  dxfimport.cpp  dxfimport.h  element.cpp  element.h  element3d.cpp  element3d.h  ellipse.cpp  ellipse.h  fixture.cpp  fixture.h  framing.cpp  framing.h  geometryworker.cpp  geometryworker.h  grid.cpp  grid.h  group.cpp  group.h  importdxf.cpp  importipc2581.cpp  inspector_model.cpp  inspector_model.h  laser.cpp  laser.h  laser_bjjcz.cpp  laser_bjjcz.h  laser_recipe.cpp  (+67 more)
tess2/: bucketalloc.cpp  bucketalloc.h  dict.cpp  dict.h  geom.cpp  geom.h  mesh.cpp  mesh.h  priorityq.cpp  priorityq.h  sweep.cpp  sweep.h  tess.cpp  tesselator.h
tools/: README.md
