cmake_minimum_required(VERSION 3.31)

project(zcam LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_VERBOSE_MAKEFILE OFF)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_AUTOMOC ON)

find_package(PkgConfig REQUIRED)
find_package(Qt6 6.5 REQUIRED COMPONENTS Gui Quick Quick3D Qml QuickControls2)

pkg_check_modules(LIBUSB REQUIRED IMPORTED_TARGET libusb-1.0)
pkg_check_modules(UDEV REQUIRED IMPORTED_TARGET libudev)

qt_standard_project_setup()

# Set policies to suppress warnings
qt_policy(SET QTP0001 NEW)
qt_policy(SET QTP0004 NEW)

qt_add_executable(zcam
      src/main.cpp
      src/logger.cpp src/logger.h
      )

qt_add_qml_module(zcam
    URI "ZCam"
    VERSION 1.0
    QML_FILES
        qml/Main.qml
        qml/View3DPanel.qml
        qml/TestCube.qml
        qml/ToolRow.qml
        qml/ToolColumn.qml
        qml/ProjectTree.qml
        qml/Shape.qml
        qml/TreeViewPanel.qml
        qml/InspectorPanel.qml
        qml/FontFamilyButton.qml
    SOURCES
        src/zcam.cpp src/zcam.h
        src/spacemouse.cpp
        src/spacemouse.h
        src/element.cpp src/element.h
        src/element3d.cpp src/element3d.h
        src/treemodel.cpp src/treemodel.h
        src/inspector_model.cpp src/inspector_model.h
        src/toplevel.cpp src/toplevel.h
        src/cad.cpp src/cad.h
        src/tessgeometry.cpp src/tessgeometry.h
        src/text.cpp src/text.h
        src/bezier.cpp src/bezier.h
        src/painterpath.cpp src/painterpath.h

        # thirdparty code
        clipper2/src/clipper.engine.cpp
        clipper2/src/clipper.offset.cpp
        clipper2/src/clipper.rectclip.cpp

        tess2/bucketalloc.cpp
        tess2/dict.cpp
        tess2/geom.cpp
        tess2/mesh.cpp
        tess2/priorityq.cpp
        tess2/sweep.cpp
        tess2/tess.cpp
      )

qt_add_resources(zcam icons FILES
      icons/view-top.svg
      icons/view-bottom.svg
      icons/view-front.svg
      icons/view-rear.svg
      icons/view-left.svg
      icons/view-right.svg
      icons/view-isometric.svg
      icons/view-perspective.svg
      icons/view-fullscreen.svg
      )

# Bundle the QtQuickControls2 style configuration so Material/Dark is active
qt_add_resources(zcam conf
    PREFIX "/"
    FILES qtquickcontrols2.conf
    )

target_link_libraries(zcam PRIVATE
      Qt6::Core
      Qt6::Gui
      Qt6::Quick
      Qt6::Quick3D
      Qt6::QuickControls2
      Qt6::Qml
      Qt6::QmlIntegration
      PkgConfig::UDEV
      PkgConfig::LIBUSB
      spnav
      )

# Explicitly include the src directory so ZCam is visible to the autogenerated code
target_include_directories(zcam PRIVATE src)
target_include_directories(zcam PRIVATE clipper2/include)
target_include_directories(zcam PRIVATE tess2)
